lang/macro/tests/ui/fail/C-03-constructor-missing-return.stderr
error: missing return for ink! constructor
  --> $DIR/C-03-constructor-missing-return.rs:10:13
   |
10 |         pub fn missing_return() {}
   |             ^^^^^^^^^^^^^^^^^^^
